--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -393,6 +393,9 @@
   "staking.navigation.stake_pools": "ステークプール",
   "staking.redeemItnRewards.noWallets.addWalletButtonLabel": "ウォレット追加",
   "staking.redeemItnRewards.noWallets.description": "インセンティブ付きテストネットの還元機能はShelley対応のウォレットがないため利用できません。",
+  "staking.redeemItnRewards.redemptionUnavailable.closeButton.label": "閉じる",
+  "staking.redeemItnRewards.redemptionUnavailable.description": "インセンティブ付きテストネットの報酬を還元するには、Daedalusがブロックチェーンと同期している必要があります。現在同期プロセスは進行中で、<b>{syncPercentage}%</b>完了しています。このプロセスが完了したら、インセンティブ付きテストネットの報酬を還元することができるようになります。ここで報酬を還元するのは、このプロセスが終了するまでお待ちください。",
+  "staking.redeemItnRewards.redemptionUnavailable.title": "インセンティブ付きテストネットの報酬を還元する",
   "staking.redeemItnRewards.step1.checkbox1Label": "インセンティブ付きテストネットで獲得した報酬の還元には、トランザクション手数料を支払う必要があることを理解しました。",
   "staking.redeemItnRewards.step1.checkbox2Label": "手数料は報酬の振込先ウォレットから支払われることを理解しました。",
   "staking.redeemItnRewards.step1.continueButton.label": "続ける",
