--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -393,6 +393,9 @@
   "staking.navigation.stake_pools": "Stake pools",
   "staking.redeemItnRewards.noWallets.addWalletButtonLabel": "Add wallet",
   "staking.redeemItnRewards.noWallets.description": "Redemption of Incentivized Testnet rewards is not available as you currently do not have any Shelley-compatible wallets.",
+  "staking.redeemItnRewards.redemptionUnavailable.closeButton.label": "Close",
+  "staking.redeemItnRewards.redemptionUnavailable.description": "Before you can redeem your Incentivized Testnet rewards, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to redeem your Incentivized Testnet rewards. Please wait for this process to complete before returning here to redeem your rewards.",
+  "staking.redeemItnRewards.redemptionUnavailable.title": "Redeem Incentivized Testnet rewards",
   "staking.redeemItnRewards.step1.checkbox1Label": "I understand that redeeming rewards from the Incentivized Testnet requires paying transaction fees.",
   "staking.redeemItnRewards.step1.checkbox2Label": "I understand that fees will be paid from the wallet I am redeeming my rewards to.",
   "staking.redeemItnRewards.step1.continueButton.label": "Continue",
