--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -576,7 +576,7 @@
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "コンピューターが喪失、故障、盗難、作動不能などとなった場合、ウォレットは復元フレーズを使用することによってのみ復元することができることを理解しました。",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>インセンティブ付きテストネットで得た報酬ADAをCardanoメインネットで受け取る際、このウォレットの復元フレーズが必要であることを理解しました。</strong>",
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "{wordCount}語のウォレット復元フレーズを入力してください。入力は正しい順序で行ってください。",
-  "wallet.byron.badge.label": "残高",
+  "wallet.byron.badge.label": "Byron",
   "wallet.byron.notification.actionLearnMore": "もっと知る",
   "wallet.byron.notification.actionMove": "既存のウォレットにADAを移す",
   "wallet.byron.notification.addWallet": "ウォレットを新規作成する",
