[DDW-341] Fixed shutdown messages priority, Enabled wallet creation and restoration during syncing

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -589,8 +589,7 @@
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
   "wallet.byron.notification.moveFundsTitle": "Move funds from \"{activeWalletName}\"",
   "wallet.create.dialog.configStep": "Config",
-  "wallet.create.dialog.create.personal.wallet.button.label": "Create wallet",
-  "wallet.create.dialog.create.personal.wallet.button.label.itn": "Create Shelley wallet",
+  "wallet.create.dialog.create.personal.wallet.button.label": "Create Shelley wallet",
   "wallet.create.dialog.hashImageStep": "Hash & Image",
   "wallet.create.dialog.instructionsStep": "Instructions",
   "wallet.create.dialog.mnemonicsStep": "Mnemonics",
@@ -602,8 +601,7 @@
   "wallet.create.dialog.spendingPasswordLabel": "Enter password",
   "wallet.create.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.create.dialog.templateStep": "Template",
-  "wallet.create.dialog.title": "Create a wallet",
-  "wallet.create.dialog.title.itn": "Create a new wallet",
+  "wallet.create.dialog.title": "Create a new wallet",
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.hardware.hardwareWalletBegin": "To begin, connect and unlock your <span>Hardware wallet Device</span>",
