--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -445,6 +445,7 @@
   "staking.stakePools.listTitle": "Stake pools ({pools})",
   "staking.stakePools.listTitleWithSearch": "Stake pools. Search results: ({pools})",
   "staking.stakePools.loadingStakePoolsMessage": "Loading stake pools",
+  "staking.stakePools.noDataDashTooltip": "Data not available yet",
   "staking.stakePools.rankingAllWallets": "all your wallets",
   "staking.stakePools.rankingAllWalletsEnd": ".",
   "staking.stakePools.rankingAllWalletsStart": "Stake pools are currently ranked based on the combined amount in",
@@ -458,7 +459,6 @@
   "staking.stakePools.rankingSelectWallet": "select a wallet",
   "staking.stakePools.rankingSelectWalletEnd": "to set the amount you intend to delegate.",
   "staking.stakePools.rankingSelectWalletStart": "Or",
-  "staking.stakePools.sandClockTooltip": "Data not available yet",
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.search.listTitle": "Stake pools ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
