--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -290,7 +290,7 @@
   "staking.delegationCenter.loadingStakePoolsMessage": "Loading stake pools",
   "staking.delegationCenter.noWallets.createWalletButtonLabel": "Create a wallet",
   "staking.delegationCenter.noWallets.headLine": "The delegation center is not available because you currently do not have any Shelley-compatible wallets.",
-  "staking.delegationCenter.noWallets.instructions": "Create a new wallet and transfer in a minimum of {minDelegationFunds} ada (or restore an existing wallet with funds), then return here to delegate your stake.",
+  "staking.delegationCenter.noWallets.instructions": "Create a new wallet and transfer in a minimum of {minDelegationFunds} ADA (or restore an existing wallet with funds), then return here to delegate your stake.",
   "staking.delegationCenter.notDelegated": "Undelegated",
   "staking.delegationCenter.or": "or",
   "staking.delegationCenter.redelegate": "Redelegate",
@@ -361,7 +361,7 @@
   "staking.delegationSetup.intro.step.dialog.stepsExplanation.step3": "Delegation confirmation",
   "staking.delegationSetup.intro.step.dialog.title": "Delegate wallet",
   "staking.delegationSetup.notAvailable.dialog.closeButtonLabel": "Close",
-  "staking.delegationSetup.notAvailable.dialog.description": "None of your Shelley wallets currently hold the <span>minimum amount of {minDelegationFunds} ada</span> required for delegation.",
+  "staking.delegationSetup.notAvailable.dialog.description": "None of your Shelley wallets currently hold the <span>minimum amount of {minDelegationFunds} ADA</span> required for delegation.",
   "staking.delegationSetup.notAvailable.dialog.title": "Delegation is currently unavailable",
   "staking.delegationSetup.steps.step.1.label": "Wallet",
   "staking.delegationSetup.steps.step.2.label": "Stake pool",
