[DDW-317] Handle random stake pool data during the first shelley epochs (#2151)
* [DDW-317]: Add shelley data availability observable

* [DDW-317]: Implement data availability check handler on stake pools

* [DDW-317]: Run translations manager

* [DDW-317]: Update stakepool tooltip

* [DDW-317]: Update changelog

* [DDW-317]: Fix stake pool tooltip style

* [DDW-317]: Update sandclock icon to no data dash

* [DDW-317]: Update japanese translation

* [DDW-317]: Update stake pool no data dash style

* [DDW-317]: Update stake pool tile style

* [DDW-317]: Update stake pool tooltip style

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -445,6 +445,7 @@
   "staking.stakePools.listTitle": "Stake pools ({pools})",
   "staking.stakePools.listTitleWithSearch": "Stake pools. Search results: ({pools})",
   "staking.stakePools.loadingStakePoolsMessage": "Loading stake pools",
+  "staking.stakePools.noDataDashTooltip": "Data not available yet",
   "staking.stakePools.rankingAllWallets": "all your wallets",
   "staking.stakePools.rankingAllWalletsEnd": ".",
   "staking.stakePools.rankingAllWalletsStart": "Stake pools are currently ranked based on the combined amount in",
